--- a/templates/web/solve.html
+++ b/templates/web/solve.html
@@ -102,11 +102,11 @@
 						<div class="submenu">
 							<ul>
 								<li class="none"></li>
-								<li>
-									<a href="">智慧交通</a>
+								<li  onclick="changeStyle(document.getElementById('one'))">
+									智慧交通
 								</li>
-								<li>
-									<a href="">工程施工</a>
+								<li onclick="changeStyle(document.getElementById('two'))">
+									工程施工
 								</li>
 							</ul>
 						</div>
@@ -138,247 +138,49 @@
 					<li class="sp" id="two" onclick="changeStyle(this)"><a href=""></a>工程施工</li>
                 </ul>
             </div>
-            <div class="bus-container">
-                <div class="bus-img">
-                    <a href="">
-                        <div class="img ">
-							<img src="{% static './img/homepage03.jpg' %}" alt="">
-						</div>
-						<div class="introduction">
-							<div class="subtitle">
-								<h2>智慧交通</h2>
-							</div>
-							<div class="text">
-								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-							</div>
-							<div class="learn-more"><a href="">了解更多»</a></div>
-						</div>
-                    </a>                        
-                </div>
-                <div class="bus-img">
-                    <a href="">
-                        <div class="img ">
-                			<img src="{% static 'img/homepage03.jpg' %}" alt="">
-                		</div>
-                		<div class="introduction">
-                			<div class="subtitle">
-                				<h2>智慧交通</h2>
-                			</div>
-                			<div class="text">
-                				<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-                			</div>
-                			<div class="learn-more"><a href="">了解更多»</a></div>
-                		</div>
-                    </a>                        
-                </div>
-				<div class="bus-img">
-				    <a href="">
-				        <div class="img ">
-							<img src="{% static 'img/homepage03.jpg' %}" alt="">
-						</div>
-						<div class="introduction">
-							<div class="subtitle">
-								<h2>智慧交通</h2>
-							</div>
-							<div class="text">
-								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-							</div>
-							<div class="learn-more"><a href="">了解更多»</a></div>
-						</div>
-				    </a>                        
-				</div>
-				<div class="bus-img">
-				    <a href="">
-				        <div class="img ">
-							<img src="{% static 'img/homepage03.jpg' %}" alt="">
-						</div>
-						<div class="introduction">
-							<div class="subtitle">
-								<h2>智慧交通</h2>
-							</div>
-							<div class="text">
-								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-							</div>
-							<div class="learn-more"><a href="">了解更多»</a></div>
-						</div>
-				    </a>                        
-				</div>
-                <div class="bus-img five">
-                    <a href="">
-                        <div class="img ">
-							<img src="{% static 'img/homepage03.jpg' %}" alt="">
-						</div>
-						<div class="introduction">
-							<div class="subtitle">
-								<h2>智慧交通</h2>
-							</div>
-							<div class="text">
-								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-							</div>
-							<div class="learn-more"><a href="">了解更多»</a></div>
-						</div>
-                    </a>
-                </div>
-                <div class="bus-img">
-                    <a href="">
-                        <div class="img ">
-                			<img src="{% static 'img/homepage03.jpg' %}" alt="">
-                		</div>
-                		<div class="introduction">
-                			<div class="subtitle">
-                				<h2>智慧交通</h2>
-                			</div>
-                			<div class="text">
-                				<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-                			</div>
-                			<div class="learn-more"><a href="">了解更多»</a></div>
-                		</div>
-                    </a>                        
-                </div>
-				<div class="bus-img">
-				    <a href="">
-				        <div class="img ">
-							<img src="{% static 'img/homepage03.jpg' %}" alt="">
-						</div>
-						<div class="introduction">
-							<div class="subtitle">
-								<h2>智慧交通</h2>
-							</div>
-							<div class="text">
-								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-							</div>
-							<div class="learn-more"><a href="">了解更多»</a></div>
-						</div>
-				    </a>                        
-				</div>
-				<div class="bus-img">
-				    <a href="">
-				        <div class="img ">
-							<img src="{% static 'img/homepage03.jpg' %}" alt="">
-						</div>
-						<div class="introduction">
-							<div class="subtitle">
-								<h2>智慧交通</h2>
-							</div>
-							<div class="text">
-								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-							</div>
-							<div class="learn-more"><a href="">了解更多»</a></div>
-						</div>
-				    </a>                        
-				</div>
-				<div class="bus-img">
-				    <a href="">
-				        <div class="img ">
-							<img src="{% static 'img/homepage03.jpg' %}" alt="">
-						</div>
-						<div class="introduction">
-							<div class="subtitle">
-								<h2>智慧交通</h2>
-							</div>
-							<div class="text">
-								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-							</div>
-							<div class="learn-more"><a href="">了解更多»</a></div>
-						</div>
-				    </a>                        
-				</div>
-                <div class="bus-img five">
-                    <a href="">
-                        <div class="img ">
-							<img src="{% static 'img/homepage03.jpg' %}" alt="">
-						</div>
-						<div class="introduction">
-							<div class="subtitle">
-								<h2>智慧交通</h2>
-							</div>
-							<div class="text">
-								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-							</div>
-							<div class="learn-more"><a href="">了解更多»</a></div>
-						</div>
-                    </a>
-                </div>
-                <div class="bus-img bottom">
-                    <a href="">
-                        <div class="img ">
-							<img src="{% static 'img/homepage03.jpg' %}" alt="">
-						</div>
-						<div class="introduction">
-							<div class="subtitle">
-								<h2>智慧交通</h2>
-							</div>
-							<div class="text">
-								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-							</div>
-							<div class="learn-more"><a href="">了解更多»</a></div>
-						</div>
-                    </a>
-                </div>
-                <div class="bus-img bottom">
-                    <a href="">
-                        <div class="img ">
-                			<img src="{% static 'img/homepage03.jpg' %}" alt="">
-                		</div>
-                		<div class="introduction">
-                			<div class="subtitle">
-                				<h2>智慧交通</h2>
-                			</div>
-                			<div class="text">
-                				<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-                			</div>
-                			<div class="learn-more"><a href="">了解更多»</a></div>
-                		</div>
-                    </a>
-                </div>
-                <div class="bus-img bottom">
-                    <a href="">
-                        <div class="img ">
-                			<img src="{% static 'img/homepage03.jpg' %}" alt="">
-                		</div>
-                		<div class="introduction">
-                			<div class="subtitle">
-                				<h2>智慧交通</h2>
-                			</div>
-                			<div class="text">
-                				<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-                			</div>
-                			<div class="learn-more"><a href="">了解更多»</a></div>
-                		</div>
-                    </a>
-                </div>
-                <div class="bus-img bottom">
-                    <a href="">
-                        <div class="img ">
-                			<img src="{% static 'img/homepage03.jpg' %}" alt="">
-                		</div>
-                		<div class="introduction">
-                			<div class="subtitle">
-                				<h2>智慧交通</h2>
-                			</div>
-                			<div class="text">
-                				<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-                			</div>
-                			<div class="learn-more"><a href="">了解更多»</a></div>
-                		</div>
-                    </a>
-                </div>
-                <div class="bus-img five bottom">
-                    <a href="">
-                        <div class="img ">
-							<img src="{% static 'img/homepage03.jpg' %}" alt="">
-						</div>
-						<div class="introduction">
-							<div class="subtitle">
-								<h2>智慧交通</h2>
-							</div>
-							<div class="text">
-								<p>Lorem ipsum, dolor sit amet Itaque, sit?</p>
-							</div>
-							<div class="learn-more"><a href="">了解更多»</a></div>
-						</div>
-                    </a>
-                </div>
+            <div class="bus-container" id="intel_trans">
+                {% for solve in solves %}
+                    {% if service.type == '1' %}
+                        <div class="bus-img {% if forloop.counter|divisibleby:5 == 0 %}five{% endif %}">
+                            <a href="">
+                                <div class="img ">
+                                    <img src="{% static 'img/homepage03.jpg' %}" alt="">
+                                </div>
+                                <div class="introduction">
+                                    <div class="subtitle">
+                                        <h2>{{ solve.title }}</h2>
+                                    </div>
+                                    <div class="text">
+                                        <p>{{ solve.header }}</p>
+                                    </div>
+                                    <div class="learn-more"><a href="">了解更多»</a></div>
+                                </div>
+                            </a>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+            <div class="bus-container" id="project" style="display: none">
+                {% for solve in solves %}
+                    {% if solve.type == '1' %}
+                        <div class="bus-img {% if forloop.counter|divisibleby:5 == 0 %}five{% endif %}">
+                            <a href="">
+                                <div class="img ">
+                                    <img src="{% static 'img/homepage03.jpg' %}" alt="">
+                                </div>
+                                <div class="introduction">
+                                    <div class="subtitle">
+                                        <h2>{{ solve.title }}</h2>
+                                    </div>
+                                    <div class="text">
+                                        <p>{{ solve.header }}</p>
+                                    </div>
+                                    <div class="learn-more"><a href="">了解更多»</a></div>
+                                </div>
+                            </a>
+                        </div>
+                    {% endif %}
+                {% endfor %}
             </div>
         </div>
         <div>
@@ -450,9 +252,18 @@
 	function changeStyle(e){
 		var one = document.getElementById("one");
 		var two = document.getElementById("two");
+		var trans = document.getElementById("intel_trans");
+		var project = document.getElementById("project");
 		one.className="sp ";
 		two.className="";
 		e.className += "activity";
+		if (e.id == "one"){
+		    trans.style.display = "";
+		    project.style.display = "none";
+        }else {
+            trans.style.display = "none";
+            project.style.display = "";
+        }
 	}
 </script>
 
